--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,57 @@ logging:
 
 t1:
   scan-path: ru.t1.java.demo
+  kafka:
+    bootstrap:
+      server: ${KAFKA_SERVER:localhost:9092}
+    session:
+      timeout:
+        ms: 450000
+    max:
+      partition:
+        fetch:
+          bytes: 300000
+      poll:
+        records: 1
+        interval:
+          ms: 100000
+    heartbeat:
+      interval:
+        ms: 150000
+    consumer:
+      client:
+        group-id: t1-demo-client
+      account:
+        group-id: t1-demo-account
+      transaction:
+        group-id: t1-demo-transaction
+    producer:
+      enable: true
+    topic:
+      client_registration: t1_demo_client_registration
+      client_id_registered: t1_demo_client_registered
+      accounts: t1_demo_accounts
+      transactions: t1_demo_transactions
+      metrics: t1_demo_metrics
+
+    listener:
+      poll-timeout: 1000
+
+track:
+  errors-to-track: JsonParseException, IOException
+  kafka:
+    enabled: ${TRACK_KAFKA_LOG_ENABLED:true}
+    bootstrap-server: localhost:9092
+    data-source-error-topic: t1_demo_data_source_error
+    time-limit-exceed: t1_demo_time_limit_exceed
+  db:
+    enabled: false
+  time-limit-exceed: 1000
+  log-level: DEBUG
+
+
+integration:
+  url: http://localhost:8088
+  resource: /bsc-wire-mock/api/client/check
+  retry-count: 3
+  retry-backoff: 1000
