add http request to service_2 with authorization

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ logging:
     ru.t1.java.demo.controller.ClientController: DEBUG
 
 t1:
+  count:
+    transactions-rejected: 7
   scan-path: ru.t1.java.demo
   kafka:
     bootstrap:
