--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,12 @@
 version: '1.0'
 
 services:
-
+  wiremock-demo:
+    image: bscmsc/bsc-wire-mock:latest
+    ports:
+      - "1398:1398"
+    volumes:
+      - ./wiremock/mappings:/app/mappings
   postgres:
     image: postgres:11.13
     container_name: t1_java_demo
