--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,7 +67,7 @@ t1:
     listener:
       poll-timeout: 1000
 
-track:
+metrics:
   errors-to-track: JsonParseException, IOException
   kafka:
     enabled: ${TRACK_KAFKA_LOG_ENABLED:true}
@@ -78,7 +78,22 @@ track:
     enabled: false
   time-limit-exceed: 1000
   log-level: DEBUG
-
+  datasource:
+    url: "jdbc:postgresql://localhost:5432/t1_demo"
+    username: bestuser
+    password: bestuser
+    driverClassName: org.postgresql.Driver
+  liquibase:
+    enabled: true
+    change-log: db/changelog/db.changelog-master.xml
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
 
 integration:
   url: http://localhost:8088
